Fix annotation job and report overflowing

--- a/web_ui/src/app/annotation-jobs-wrapper/annotation-jobs-wrapper.component.css
+++ b/web_ui/src/app/annotation-jobs-wrapper/annotation-jobs-wrapper.component.css
@@ -33,6 +33,7 @@
 #annotation-container {
   display: flex;
   flex: 1;
+  min-width: 0;
   justify-content: flex-start;
   gap: 50px;
   padding-right: 25px;
