--- a/web_ui/src/app/single-annotation-wrapper/single-annotation-wrapper.component.css
+++ b/web_ui/src/app/single-annotation-wrapper/single-annotation-wrapper.component.css
@@ -8,6 +8,7 @@
 #annotation-container {
   display: flex;
   flex: 1;
+  min-width: 0;
   justify-content: flex-start;
   gap: 10px;
   padding-right: 25px;
